k8s/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poli
  namespace: marlon

spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  clusterIP: None
  selector:
    app: poli
